--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,7 +13,14 @@
     "plugin:react/jsx-runtime",
     "plugin:prettier/recommended"
   ],
-  "overrides": [],
+  "overrides": [
+    {
+      "files": ["**/actions/*"],
+      "rules": {
+        "no-param-reassign": "off"
+      }
+    }
+  ],
   "parserOptions": {
     "ecmaFeatures": {
       "jsx": true
